Fix blog overview on smaller screens

--- a/src/assets/styles/modules/blog-preview-list.scss
+++ b/src/assets/styles/modules/blog-preview-list.scss
@@ -14,7 +14,9 @@
 
 .blog-preview-list--large .blog-preview-list__item:nth-of-type(1),
 .blog-preview-list--large .blog-preview-list__item:nth-of-type(2) {
-  width: calc(50% - (#{$gap-ml} * 2));
+  @include bp-min($bp-l) {
+    width: calc(50% - (#{$gap-ml} * 2));
+  }
 }
 
 .blog-preview-list__item {
